corpus/align.txt
=============================
Right aligned text unit
=============================
{\rtf1\ansi\ansicpg1252\cocoartf2636
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
{\colortbl;\red255\green255\blue255;}
{\*\expandedcolortbl;;}
\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\qr\partightenfactor0

\f0\fs24 \cf0 RightAlignedContent}
----------------------------
(document
      (fonttbl
        (fontname))
      (colortbl
        (colorvalue
          (static_number_literal)
          (static_number_literal)
          (static_number_literal)))
      (par_tbl
        (alignment_config))
      (text_unit
        (text_unit_config)
        (text_unit_config)
        (text_unit_config)
        (text_unit_content)))

=============================
Center aligned text unit
=============================
{\rtf1\ansi\ansicpg1252\cocoartf2636
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
{\colortbl;\red255\green255\blue255;}
{\*\expandedcolortbl;;}
\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\qc\partightenfactor0

\f0\fs24 \cf0 RightAlignedContent}
----------------------------
(document
    (fonttbl
      (fontname))
    (colortbl
      (colorvalue
        (static_number_literal)
        (static_number_literal)
        (static_number_literal)))
    (par_tbl
      (alignment_config))
    (text_unit
      (text_unit_config)
      (text_unit_config)
      (text_unit_config)
      (text_unit_content)))

=============================
Justified aligned text unit
=============================
{\rtf1\ansi\ansicpg1252\cocoartf2636
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
{\colortbl;\red255\green255\blue255;}
{\*\expandedcolortbl;;}
\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\qj\partightenfactor0

\f0\fs24 \cf0 RightAlignedContent}
----------------------------
(document
  (fonttbl
    (fontname))
  (colortbl
    (colorvalue
      (static_number_literal)
      (static_number_literal)
      (static_number_literal)))
  (par_tbl
    (alignment_config))
  (text_unit
    (text_unit_config)
    (text_unit_config)
    (text_unit_config)
    (text_unit_content)))

=============================
4 text units with different types of alignments combined where left aligned is not specified
=============================
{\rtf1\ansi\ansicpg1252\cocoartf2636
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
{\colortbl;\red255\green255\blue255;}
{\*\expandedcolortbl;;}
\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\qj\partightenfactor0

\f0\fs24 \cf0 Justified\
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\qc\partightenfactor0
\cf0 Centered\
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
\cf0 Left\
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\qr\partightenfactor0
\cf0 Right\
}
----------------------------
(document
    (fonttbl
      (fontname))
    (colortbl
      (colorvalue
        (static_number_literal)
        (static_number_literal)
        (static_number_literal)))
    (par_tbl
      (alignment_config))
    (text_unit
      (text_unit_config)
      (text_unit_config)
      (text_unit_config)
      (text_unit_content))
    (par_tbl
      (alignment_config))
    (text_unit
      (text_unit_config)
      (text_unit_content))
    (par_tbl)
    (text_unit
      (text_unit_config)
      (text_unit_content))
    (par_tbl
      (alignment_config))
    (text_unit
      (text_unit_config)
      (text_unit_content)))
