corpus/colors.txt
=============================
1 word with color specified
=============================
{\rtf1\ansi\ansicpg1252\cocoartf2638
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
{\colortbl;\red255\green255\blue255;\red255\green0\blue0;\red0\green0\blue255;}
{\*\expandedcolortbl;;}
\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural\partightenfactor0

\f0\fs24 \cf2 Hello}
----------------------------
(document
    (fonttbl
      (font_definition
          (fontname)))
    (colortbl
    (colorvalue
        (static_number_literal)
        (static_number_literal)
        (static_number_literal))
    (colorvalue
        (static_number_literal)
        (static_number_literal)
        (static_number_literal))
    (colorvalue
        (static_number_literal)
        (static_number_literal)
        (static_number_literal)))
    (par_tbl)
    (text_unit
        (fontIndex)
        (fontSize)
        (colorFontIndex)
        (text_unit_content)))


=============================
2 words with different colors with 1 space between words
=============================
{\rtf1\ansi\ansicpg1252\cocoartf2638
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
{\colortbl;\red255\green255\blue255;\red255\green0\blue0;\red0\green0\blue255;}
{\*\expandedcolortbl;;}
\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural\partightenfactor0

\f0\fs24 \cf2 Hello \cf3 World}
----------------------------
(document
    (fonttbl
      (font_definition
        (fontname)))
    (colortbl
    (colorvalue
        (static_number_literal)
        (static_number_literal)
        (static_number_literal))
    (colorvalue
        (static_number_literal)
        (static_number_literal)
        (static_number_literal))
    (colorvalue
        (static_number_literal)
        (static_number_literal)
        (static_number_literal)))
    (par_tbl)
    (text_unit
        (fontIndex)
        (fontSize)
        (colorFontIndex)
        (text_unit_content))
    (text_unit
        (colorFontIndex)
        (text_unit_content)))


=============================
2 words with different colors without spaces between words
=============================
{\rtf1\ansi\ansicpg1252\cocoartf2638
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
{\colortbl;\red255\green255\blue255;\red255\green0\blue0;\red0\green0\blue255;}
{\*\expandedcolortbl;;}
\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural\partightenfactor0

\f0\fs24 \cf2 Hello\cf3 World}
----------------------------
(document
      (fonttbl
        (font_definition
          (fontname)))
      (colortbl
        (colorvalue
          (static_number_literal)
          (static_number_literal)
          (static_number_literal))
        (colorvalue
          (static_number_literal)
          (static_number_literal)
          (static_number_literal))
        (colorvalue
          (static_number_literal)
          (static_number_literal)
          (static_number_literal)))
      (par_tbl)
      (text_unit
        (fontIndex)
        (fontSize)
        (colorFontIndex)
        (text_unit_content))
      (text_unit
        (colorFontIndex)
        (text_unit_content)))

